--- a/.github/workflows/git-build.yml
+++ b/.github/workflows/git-build.yml
@@ -8,14 +8,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [16.x, 18.x]
-
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '16.16.0'
     - run: npm ci
     - run: npm run test
