--- a/.github/workflows/git-build.yml
+++ b/.github/workflows/git-build.yml
@@ -8,10 +8,14 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [16.x, 18.x]
+
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
-        node-version: '16.16.0'
+        node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run test
